# cogesak-LakeHouseMapper

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
configs/: qa.yaml  spark_constants.py  tables.yaml
docs/: employee.csv  running_notes.txt
localData/: orders.csv
postgres-init/: init.sql  insert_statements.sql
src/constants/: spark_constants.py
src/jobs/: 00_delta_tables.py  delta_merge_bc_table.py  stage_data.py
src/utils/: config_reader.py  db_utils.py  schema.py  spark_utils.py
